2013-06-19  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_main): New.
	(chx_init): Initialize chopstx_main.

	* example-cdc/sample.c (usb_intr): No disable/enable interrupt,
	but call the handler.

2013-06-13  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chopstx_usec_wait_var): Rename (was:
	chopstx_usec_wait_internal), as it's user visible.

2013-06-12  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_init): Inhibit preemption for main thread.

2013-06-11  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_timer_expired): Use uint16_t here.
	(chx_cpu_sched_lock, chx_cpu_sched_unlock): Change only when
	its priority is lower than CHOPSTX_PRIO_INHIBIT_PREEMPTION.

2013-06-06  Niibe Yutaka  <gniibe@fsij.org>

	* entry.c: Include sys.h for clock_init and gpio_init.

	* chopstx.c (PREEMPTION_USEC): Fix the value.
	(sched): Check tp != NULL to see flag_sched_rr.

2013-06-05  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (sched, preempt, svc, chx_timer_expired, chx_exit)
	(chopstx_usec_wait, chopstx_mutex_lock, chopstx_cond_wait)
	(chopstx_intr_wait, chopstx_join): Implement SCHED_RR.
	(chopstx_create): Change API.
	(chopstx_wakeup_usec_wait): New.
	(chopstx_usec_wait): Accept wakeup to break.
	(chopstx_usec_wait_internal): New.
	(CHX_FLAGS_MAIN): New.
	(chx_systick_init): Add chx_timer_insert for main.
	(chx_set_timer): Don't set thread state.
	(chopstx_usec_wait_internal): Set thread state to THREAD_WAIT_TIME.

2013-06-04  Niibe Yutaka  <gniibe@fsij.org>

	* chopstx.c (AIRCR): New.
	(chx_init): Setting for PRIGROUP 2-bit:2-bit.
	(sched): Unlock cpu_sched_lock on return to thread.
	(preempt, chx_timer_expired, chx_handle_intr): Those can be
	considered holding cpu_sched_lock (by its equal exception
	priorities), thus no acquiring lock required.
	(CHX_PRIO_MAIN): New macro.
	(chopstx_create): Change API.
	(chopstx_attr_init, chopstx_attr_setschedparam)
	(chopstx_attr_setstack): Remove.
	(chopstx_intr_wait, chopstx_join): Call chx_cpu_sched_unlock.