@@ -1,5 +1,8 @@
 2013-06-19  Niibe Yutaka  <gniibe@fsij.org>
 
+	* rules.mk (CSRC): Add eventflag.c.
+	* eventflag.h, eventflag.c: New.
+
 	* chopstx.c (chopstx_main): New.
 	(chx_init): Initialize chopstx_main.
 
